--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h1>Hippo Sliding Awareness</h1>
   <h2>"Hippo sliding is crazy and it needs to go down - Uncle Iroh"</h2>
   <h1>What is hippo sliding?</h1>
+  <img src="https://www.dropbox.com/s/wvtp9cf6met9wva/Photo%20Aug%2011%2C%2010%2052%2003%20AM.png?dl=1"></img>
   <h2>A hippo slide is when hippos go to the top of a mountain with bathtubs and slide down the mountain in them. Sometimes they go so fast they keep going for a long time. Hippo slides are aften airborne. if a hippo slide gets to a town they have such force they can go straight through multiple houses before slowing down. The world record is one hippo going straight through 22 houses. Usually a hippo slide has multiple hippos going after another so if your house is hit by s hippo more will probably come.</h2>
   <h2>Just imagine a hippo in a bathtub suddenly crashing through a second story window at extreme speed then proceeding to go through every wall until there is a big hale in your house.
 </html>
