--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <h2>A hippo slide is when hippos go to the top of a mountain with bathtubs and slide down the mountain in them. Sometimes they go so fast they keep going for a long time. Hippo slides are aften airborne. if a hippo slide gets to a town they have such force they can go straight through multiple houses before slowing down. The world record is one hippo going straight through 22 houses. Usually a hippo slide has multiple hippos going after another so if your house is hit by s hippo more will probably come.</h2>
   </font>
   <h2>Just imagine a hippo in a bathtub suddenly crashing through a second story window at extreme speed then proceeding to go through every wall until there is a big hole in your house.
-    <p>
+    
       <h1><font color="red">Hippo sliding is STILL LEGAL! we have to make it ILLEGAL!</font> </h1>
-      <p>
-        <p><font size=10> &copy Copyright 2020 HippoAndRhinoSlidingAwarenessOrganization Organization<p> Related: Rhino awareness page (coming soon!)
-          <p> 
+      
+        <h4> <font size=10><p><p><p><p><p> &copy Copyright 2020 HippoAndRhinoSlidingAwarenessOrganization Organization<p> Related: Rhino awareness page (coming soon!)
+     </h4>
 </html>
