--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     
       <h1><font color="red">Hippo sliding is STILL LEGAL! we have to make it ILLEGAL!</font> </h1>
       
-        <h4> <font size=10><p><p><p><p><p> &copy Copyright 2020 HippoAndRhinoSlidingAwarenessOrganization Organization<p> Related: Rhino awareness page (coming soon!)
+        <h4> <font size=10><p><p><p><p> &copy Copyright 2020 HippoAndRhinoSlidingAwarenessOrganization Organization<p> Related: Rhino awareness page (coming soon!)
      </h4>
 </html>
