--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <font color="purple" size="30">Hippo Sliding Awareness</font>
   <h2>"Hippo sliding is crazy and it needs to go down - Uncle Iroh"</h2>
   <font color="blue"><h1>What is hippo sliding?</h1>>
-  <img src="https://www.dropbox.com/s/pxwxz9wbupqzz33/HIPPO.png?dl=0" />
+  <img src="https://www.dropbox.com/s/pxwxz9wbupqzz33/HIPPO.png?raw=1" />
   <h2>A hippo slide is when hippos go to the top of a mountain with bathtubs and slide down the mountain in them. Sometimes they go so fast they keep going for a long time. Hippo slides are aften airborne. if a hippo slide gets to a town they have such force they can go straight through multiple houses before slowing down. The world record is one hippo going straight through 22 houses. Usually a hippo slide has multiple hippos going after another so if your house is hit by s hippo more will probably come.</h2>
   </font>
   <h2>Just imagine a hippo in a bathtub suddenly crashing through a second story window at extreme speed then proceeding to go through every wall until there is a big hole in your house.
